css,iconFont,忽略，别名配置

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
